# jdbc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README_cn.md  build.rs  pom.xml  test_db.toml
script/: init_test_docker.bat
src/: builder.rs  errors.rs  lib.rs  util.rs
src/wrapper/: hikari.rs  io.rs  mod.rs  properties.rs
src/wrapper/sql/: connection.rs  datasource.rs  mod.rs  result.rs  result_meta.rs  statement.rs
tests/: all_types.rs  async.rs  base_type.rs  hikari.rs  reference_type.rs  shared_vm.rs  threads.rs
tests/types/: base_type.rs  big_decimal.rs  bytes.rs  date_time.rs  io.rs  mod.rs  null.rs
tests/util/: mod.rs
