[package]
name = "jdbc"
version = "0.0.0"
edition = "2021"
description = "Rust bindings to the Java Jdbc."
license = "MIT"
keywords = ["java", "jdbc", "mysql", "postgresql", "oracle", "sqlserver", "dm8"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
jni = { version = "0.21.1", features = ["invocation"] }
