[package]
name = "jdbc"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to the Java Jdbc."
license = "MIT"
keywords = ["jdbc", "mysql", "postgresql", "oracle", "sqlserver"]
repository = "https://github.com/sika-rs/jdbc-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
jni = { version = "0.21.1", features = ["invocation"] }

[features]
default = ["hikari"]
hikari = []
