[package]
name = "jdbc"
version = "0.1.0"
edition = "2021"
description = "Rust bindings to the Java Jdbc."
license = "MIT"
keywords = ["jdbc", "mysql", "postgresql", "oracle", "sqlserver"]
repository = "https://github.com/sika-rs/jdbc-rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
jni = { version = "0.21.1", features = ["invocation"] }
chrono = "0.4.26"
tokio = "*"
async-std = "*"
async-trait = "0.1.73"

[dev-dependencies]
chrono = "0.4.26"
lazy_static = "1.4.0"
tokio-test = "0.4.3"


[features]
default = []
chrono = []
tokio = ["async"]
async-std = ["async"]
async = []
